Python wrapper and env.yml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.associations": {
     "ostream": "cpp"
-  }
+  },
+  "python.pythonPath": "/home/mdevino/anaconda3/envs/hbrkga/bin/python"
 }
